Make sure text is readable regardless of the background

--- a/src/templates/assets/css/upstream.css
+++ b/src/templates/assets/css/upstream.css
@@ -405,3 +405,7 @@ td .btn {
 .c-data-table__filters select.o-select2[multiple] + .select2-container .select2-selection__rendered {
   padding-left: 0;
 }
+
+.up-o-label {
+  border: none;
+}
